# simple-tts-bot

./: README.md  main.py  pyproject.toml
locales/: en_CA.json
