[project]
name = "simple-tts-bot"
version = "0.1.0"
description = "A simple Discord text-to-speech bot"
authors = [
    {name = "ThePixelPolygon",email = "ThePixelPolygon@users.noreply.github.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py (>=2.6.4,<3.0.0)",
    "python-i18n (>=0.3.9,<0.4.0)"
]

[dependency-groups]
dev = [
    "pyttsx3 (>=2.99,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
